# Turbofan-ML-lifecycle

./: .env.example  .gitignore  Dockerfile.driftdetector  Dockerfile.feedback  Dockerfile.prediction  Dockerfile.retraining  README.md  docker-compose.yml  main.py  pyproject.toml  tox.ini
.github/workflows/: auto-release.yml  build.yml  main-merge-check.yaml
_plan/: README.md  step-01-foundation-and-data.md  step-02-model-development.md  step-03-api-development.md  step-04-monitoring-stack.md  step-05-drift-detection-and-automation.md  step-06-containerization.md  step-07-production-simulation.md  step-08-documentation.md  step-09-kubernetes-deployment.md  step-10-advanced-deep-learning.md
monitoring/grafana/dashboards/: prediction_overview.json  rmse_drift-detection.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 2.0-Preprocess.ipynb  2.1-Feature-Engineering.ipynb  3.1-Modeling-RF.ipynb
services/drift_detector/: service.py  service_.py
services/feedback/: bentofile.yaml  feedback_service.py  service.py
services/prediction/: bentofile.yaml  prediction_service.py  service.py
services/retraining/: service.py
services/retrainning/: service.py
src/data/: feature_engineering.py  load.py
src/data_utils/: feature_engineering.py  load.py
src/drift/: logic.py  metrics.py  thresholds.py
src/models/: model_bundle.py  random_forest_utils.py  train_RF.py
src/scripts/: call_predict.py  continuous_predict.py  download_raw_data.py  script_metrics.py  train_eval_RF.py
src/utils/: config.py
tests/: test_basic.py
