[project]
name = "turbofan-predictive-maintenance"
version = "0.1.0"
description = "Turbofan predictive maintenance experimentation and utilities"
authors = [
    { name = "Maxime Maréchal", email = "max.marechal@gmail.com" },
]
requires-python = ">=3.13,<3.14"
# Intentionally no readme field to avoid referencing a non-existent README file
dependencies = [
    "bentoml>=1.4.28",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.8.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "watchdog>=6.0.0",
]

[project.scripts]
initialize = "src.scripts.download_raw_data:main"
continuous = "src.scripts.continuous_predict:main"

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "pandas-stubs>=2.3.2.250926",
    "joblib-stubs>=1.5.2.0.20250831",
    "types-requests>=2.32.4.20250913",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.0",
    "coverage[toml]>=7.6.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project Python packages live under src/
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "N", "I", "B", "UP", "TCH", "ANN", "PT"]
ignore = [
    "E501",  # covered by formatter / line length managed elsewhere
    "ANN401",  # allow Any in some cases
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["src", "services", "main.py"]

[tool.coverage.report]
precision = 2
skip_empty = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
exclude = [".*\\.ipynb$"]
files = [
    "src",
    "services",
]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

